Smazané nepotřebné soubory a vytvořená nápověda

--- a/src/main/resources/cz/vse/seka01_semestralka/main/napoveda.html
+++ b/src/main/resources/cz/vse/seka01_semestralka/main/napoveda.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Nápověda</title>
+    <meta charset="utf-8"/>
+    <title>Návod na hru O Červené Karkulce</title>
 </head>
 <body>
-Nápověda
+<h1>Návod na hru O Červené Karkulce</h1>
+<p>Vítám vás u mojí hry O Červené Karkulce!</p>
+
+<h2>Pravidla hry</h2>
+<ul>
+    <li>Cílem hry je dostat se s Červenou Karkulkou bezpečně do babiččina domu a udělat jí radost.</li>
+    <li>Hráč se pohybuje po herní ploše klikáním na různé oblasti, kam zrovna chce vkročit.</li>
+    <li>Na cestě k babičce se Karkulka může setkat s vlkem.</li>
+    <li>Postavy mohou mít pro Karkulku různé dopady na hru.</li>
+    <li>Hra končí buď úspěchem, když Karkulka dorazí k babičce, nebo neúspěchem, když ji vlk sežere.</li>
+
+    <li>Pro všechny zmíněné mechaniky je možné adventuru ovládat pomocí textu.</li>
+</ul>
+
+<h2>Tipy pro úspěšné dokončení hry</h2>
+<ol>
+    <li>Snažte se pamatovat si, které postavy jsou pro Karkulku přátelské a které ne.</li>
+    <li>Pozorujte své okolí - některé předměty mohou mít pro hru klíčový význam.</li>
+    <li>Nepodceňujte taktiku a strategii.</li>
+    <li>Pokud se zaseknete, nevzdávejte se a zkuste to znovu! Vždy můžete použít příkaz "nápověda".</li>
+</ol>
+
+<p>Tak co, jste připraveni se vydat na cestu s Červenou Karkulkou? Hodně štěstí!</p>
 </body>
 </html>
